--- a/index.html
+++ b/index.html
@@ -875,6 +875,77 @@
             // **Inject report content into the modal**
             reportContent.innerHTML = reportHTML;
 
+            // **Add Watermark Divs at 25%, 50%, and 75% of the Page**
+            const watermarkTexts = [
+                {
+                    title: "SAMPLE PROFITABILITY REPORT",
+                    subtitle: "– BASED ON PROJECTIONS ONLY",
+                    top: "25%"
+                },
+                {
+                    title: "SAMPLE PROFITABILITY REPORT",
+                    subtitle: "– BASED ON PROJECTIONS ONLY",
+                    top: "50%"
+                },
+                {
+                    title: "SAMPLE PROFITABILITY REPORT",
+                    subtitle: "– BASED ON PROJECTIONS ONLY",
+                    top: "75%"
+                }
+            ];
+
+            watermarkTexts.forEach((watermark, index) => {
+                const watermarkDiv = document.createElement('div');
+                watermarkDiv.classList.add('watermark');
+                watermarkDiv.innerHTML = `
+                    <div class="watermark-line">${watermark.title}</div>
+                    <div class="watermark-line">${watermark.subtitle}</div>
+                `;
+                // Set styles for each watermark
+                watermarkDiv.style.top = watermark.top; // 25%, 50%, 75%
+                watermarkDiv.style.left = '50%'; // Center horizontally
+                watermarkDiv.style.transform = 'translate(-50%, -50%) rotate(-45deg)';
+                reportContent.appendChild(watermarkDiv);
+            });
+
+            // **Inject CSS Styles for Watermark (Ensure this is added only once)**
+            if (!document.getElementById('watermarkStyles')) {
+                const watermarkStyle = document.createElement('style');
+                watermarkStyle.id = 'watermarkStyles';
+                watermarkStyle.innerHTML = `
+                    /* Ensure the reportContent container is positioned relatively */
+                    #reportContent {
+                        position: relative;
+                    }
+
+                    /* Watermark Styles */
+                    .watermark {
+                        position: absolute;
+                        text-align: center;
+                        color: rgba(200, 200, 200, 0.3); /* Light gray with 30% opacity */
+                        pointer-events: none; /* Allow clicks to pass through the watermark */
+                        user-select: none; /* Prevent text selection */
+                        z-index: 1000; /* Ensure it sits above other content */
+                        font-family: Arial, sans-serif; /* Consistent font */
+                    }
+
+                    .watermark-line {
+                        font-size: 36px; /* Adjust font size as needed */
+                        line-height: 1.2; /* Adjust spacing between lines */
+                    }
+
+                    /* Additional CSS for Disclaimer (if implemented) */
+                    .report-disclaimer {
+                        margin-top: 20px;
+                        font-size: 12px;
+                        color: #555;
+                        border-top: 1px solid #ccc;
+                        padding-top: 10px;
+                    }
+                `;
+                document.head.appendChild(watermarkStyle);
+            }
+
             // **Display the modal**
             reportModal.style.display = 'block';
 
