--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -761,7 +762,7 @@
             // Generate report content based on supplied text
             const reportHTML = `
                 <div class="logo">
-                    <img src="https://static.showit.co/file/UwdjWfwfRQ-XzVtd8ECO4g/176740/cmri_blue_for_dk.png" alt="The Culture MRI® Logo">
+                    <img src="data:image/png;base64,iVBORw0KGgoAAAA" alt="The Culture MRI® Logo">
                 </div>
                 <hr class="horizontal-line">
                 <h2>Projected Financial Impact For Your Company</h2>
@@ -1042,7 +1043,3 @@
         });
     });
 </script>
-
-    
-</body>
-</html>
