--- a/index.html
+++ b/index.html
@@ -976,8 +976,8 @@
                         const imgData = canvas.toDataURL('image/png');
 
                         // **Define Margins and Page Dimensions**
-                        const marginLeft = 54; // 1.25in *72pt/in = 54pt
-                        const marginTop = 54;  // 0.25in
+                        const marginLeft = 54; // .25in *72pt/in = 54pt
+                        const marginTop = 36;  // 0.5in
                         const marginRight = 54; // 0.25in
                         const marginBottom = 36; // 0.5in
 
