--- a/index.html
+++ b/index.html
@@ -976,9 +976,9 @@
                         const imgData = canvas.toDataURL('image/png');
 
                         // **Define Margins and Page Dimensions**
-                        const marginLeft = 18; // .25in *72pt/in = 18pt
-                        const marginTop = 24;  // 0.25in
-                        const marginRight = 18; // 0.25in
+                        const marginLeft = 90; // 1.25in *72pt/in = 90pt
+                        const marginTop = 90;  // 0.25in
+                        const marginRight = 90; // 0.25in
                         const marginBottom = 36; // 0.5in
 
                         const pageWidth = 612; // 8.5in *72pt/in =612pt
