--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         }
 
         .report-content .logo img {
-            max-width: 225px; /* larger than previous 150px */
+            max-width: 225px; /* 2x larger than previous 150px */
             height: auto;
         }
 
@@ -975,15 +975,15 @@
                         const imgData = canvas.toDataURL('image/png');
 
                         // **Define Margins and Page Dimensions**
-                        const marginLeft = 10; // 0.25in *72pt/in = 18pt
-                        const marginTop = 36;  // 0.25in
-                        const marginRight = 10; // 0.25in
+                        const marginLeft = 18; // 0.25in *72pt/in = 18pt
+                        const marginTop = 18;  // 0.25in
+                        const marginRight = 18; // 0.25in
                         const marginBottom = 36; // 0.5in
 
                         const pageWidth = 612; // 8.5in *72pt/in =612pt
                         const pageHeight = 792; //11in *72pt/in =792pt
 
-                        const contentWidth = pageWidth - marginLeft - marginRight; //592pt
+                        const contentWidth = pageWidth - marginLeft - marginRight; //576pt
                         const contentHeight = pageHeight - marginTop - marginBottom; //738pt
 
                         // **Instantiate jsPDF with 'letter' format**
