--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                 <!-- After Section Header -->
                 <h3 class="blue-header">After:</h3>
                 
-                <p>By implementing targeted strategies and The Culture MRI® recommendations to elevate employee engagement to ${projectedEngagement}%, you will recover ${formatCurrency(additionalProfit)} annually from your existing labor investment.</p>
+                <p>With The Culture MRI® and customized recommendations provided in The Culture MRI® assessment of findings, you will conservatively be able to elevate your employee engagement to ${projectedEngagement}%, thereby recovering ${formatCurrency(additionalProfit)}  in incremental annual labor efficiency.</p>
                 
                 <!-- Insert Projected Engagement Gauge, Return-On-Labor® Gauge, and Annualized Lost Labor in 3 Columns -->
                 <div class="results-section">
