--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
                         // **Define Margins and Page Dimensions**
                         const marginLeft = 36; // 0.5in *72pt/in = 36pt
                         const marginTop = 54;  // 0.75in * 72pt/in = 54pt
-                        const marginRight = marginRight = 36; // 0.5in * 72pt/in = 36pt
+                        const marginRight = 36; // Fixed the syntax error here
                         const marginBottom = 36; // 0.5in * 72pt/in = 36pt
 
                         const pageWidth = 612; // 8.5in *72pt/in =612pt
