--- a/index.html
+++ b/index.html
@@ -868,6 +868,8 @@
                 
                 <!-- Download PDF Button -->
                 <button class="download-pdf-button no-pdf" id="downloadPDFButton">Download Sample Analysis Report</button>
+                <!-- Schedule A Demo Button (Initially Hidden) -->
+                <button class="schedule-demo-button no-demo" id="scheduleDemoButton" style="display: none;">Schedule A Demo</button>
             `;
 
             // **Inject report content into the modal**
