--- a/index.html
+++ b/index.html
@@ -545,6 +545,12 @@
         <span class="close-button">&times;</span>
         <div class="report-content" id="reportContent">
             <!-- Report content will be injected here -->
+
+            <!-- Include html2canvas -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaQKXWXIPkjSVXoALRB0f+beqk8JtJ+hncFLzUe7rE9sqf6XciDcgQ8uaJjq+5yyxf+gkX3jvIkVgC7rq0e5w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<!-- Include jsPDF -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-3fGtvI3L1rLHB9tqZxY5+g7FJ1H62eM6hkGmLjlg4VLE/9xNpN3HDxBrLkRMVnUEGWkjps4K1QmZ4S2F3wN4VA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         </div>
     </div>
 </div>
