--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                 </div>
                 
                 <!-- Download PDF Button -->
-                <button class="download-pdf-button no-pdf" id="downloadPDFButton">Download Sample Analysis Report</button>
+                <button class="download-pdf-button no-pdf" id="downloadPDFButton">Download Your Report</button>
             `;
 
             // **Inject report content into the modal**
